fix debian/rules to actually produce debug package
Signed-off-by: Ivaylo Dimitrov <ivo.g.dimitrov.75@gmail.com>

--- a/debian/rules
+++ b/debian/rules
@@ -41,7 +41,7 @@ binary: build install
 	dh_installdocs
 	dh_installchangelogs
 	dh_link
-	dh_strip
+	dh_strip --dbg-package=libcodelockui1-dbg
 	dh_compress
 	dh_fixperms
 	dh_makeshlibs
